--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "dev": "next dev"
   },
   "dependencies": {
-    "next": "^13.4.3",
+    "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "resend": "^0.14.0"
+    "resend": "^0.15.1"
   },
   "devDependencies": {
-    "@types/node": "20.2.1",
-    "@types/react": "18.2.6",
-    "typescript": "5.0.4"
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.9",
+    "typescript": "^5.1.3"
   }
 }
