--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "dev": "next dev"
   },
   "dependencies": {
-    "next": "^13.4.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "resend": "^0.15.1"
+    "next": "13.4.13",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "resend": "latest"
   },
   "devDependencies": {
-    "@types/node": "^20.2.5",
-    "@types/react": "^18.2.9",
-    "typescript": "^5.1.3"
+    "@types/node": "20.4.8",
+    "@types/react": "18.2.19",
+    "typescript": "5.1.6"
   }
 }
