chore: Upgrade to Next 14 (#22)
Co-authored-by: Bu Kinoshita <6929565+bukinoshita@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "dev": "next dev"
   },
   "dependencies": {
-    "next": "13.4.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
     "resend": "latest"
   },
   "devDependencies": {
