--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "resend": "latest"
   },
   "devDependencies": {
-    "@types/node": "20.8.10",
-    "@types/react": "18.2.63",
-    "typescript": "5.3.3"
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "typescript": "latest"
   }
 }
